# DSPy-Experiments

./: README.md  bootstrap-few-shot.json  docker-compose.yml  dspy.ipynb  labeled_few_shot.json  miprov2.json  pyproject.toml
