[project]
name = "dspy-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.9.0",
    "dspy>=2.6.16",
    "openinference-instrumentation-dspy>=0.1.19",
    "openinference-instrumentation-litellm>=0.1.14",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
